0. Stream API улучшения[#199555]